# gandalf

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml  makefile
migrations/versions/: 0000_initial.sql
settings_examples/: development.env
src/: app_modules.rs  app_state.rs  config.rs  main.rs  server.rs
src/adapters/: dtos.rs
src/app_modules/: app_state.rs  auth.rs  mod.rs
src/app_modules/api/: mod.rs  v1.rs
src/app_modules/api/v1/: routers.rs  routes.rs  schemas.rs  user_endpoints.rs  user_handlers.rs
src/app_modules/api/v1/schemas/: mod.rs  user_schemas.rs
src/app_modules/auth/: auth_strategies.rs  mod.rs
src/app_modules/auth/auth_strategies/: email_password_strategy.rs
src/app_modules/auth/strategies/: email_password_strategy.rs  mod.rs  traits.rs
src/app_modules/pwd/: mod.rs
src/app_state/: app_config.rs  db.rs  db_config.rs
src/config/: app_config.rs  auth_config.rs  database.rs  defaults.rs
src/domain/: errors.rs  models.rs  repositories.rs  services.rs
src/domain/models/: auth_provider_model.rs  mod.rs  user_model.rs
src/domain/repositories/: base_repository.rs  user_repository.rs
src/domain/services/: auth_service.rs  email_service.rs  user_service.rs
