[package]
name = "gandalf"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
tokio = { version = "1.36", features = ["full", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }